styles_src/q-table.scss
.q-table {
  opacity: 1 !important;
}

.q-table__subtitle {
  margin-bottom: 12px;
}

.q-table__cell {
  text-align: left !important;
}

.q-table__cell--numeric {
  text-align: right !important;
}

// only td should not break, th of --numeric columns are allowed to wrap
td.q-table__cell--numeric {
  white-space: nowrap;
}

// the high specificty is needed because nzz frontends apply lots of highly specific table styles we need to overwrite
// this will change in the future and allow us to lower the specificity here again
.q-table {
  table {
    border-collapse: collapse;
    border: none;
    margin: 0;
    padding: 0;
    width: 100%;
    table-layout: auto;
    empty-cells: show;
  }
  table thead {
    background: unset;
  }
  table tbody tr,
  table thead tr {
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #e9e9ee;
  }
  table th,
  table td {
    padding: 10px 4px;
    vertical-align: top;
    border: none !important;
    font-size: unset;
    line-height: unset;
    font-weight: unset;
  }
}

// when the text-column follows a numeric-column, the text-column should have a padding for spacing reasons
.q-table:not(.q-table--card-layout) .q-table__cell--numeric + .q-table__cell:not(.q-table__cell--numeric):not(#q.table-minibar-header) {
  padding-left: 20px;
}

.q-table--card-layout .q-table-minibar-cell {
  display: flex;
  justify-content: flex-end;
}

.q-table--card-layout {
  table {
    border: 0;
  }
  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }
  table tr {
    transition: transform 0.2s ease-in;
    padding-top: 3px;
    padding-bottom: 3px;
    &:first-child {
      padding-top: 0;
    }
  }
  table td {
    display: block;
  }
  table th,
  table td {
    padding: 4px 0 !important; // overwrite the padding from outside card-layout
  }

  tbody:first-child {
    td {
      text-align: left !important;
    }
  }

  // apply the label pseudo element and changed text-align only if we have a head
  // we do not have a head if the option hideTableHeader is set to true
  thead + tbody {
    td {
      text-align: right !important;
    }
    td::before {
      /*
      * aria-label has no advantage, it won't be read inside a table
      content: attr(aria-label);
      */
      content: attr(data-label);
      float: left;
      font-weight: 500;
      max-width: 80%;
      text-align: left !important;
    }
    td::after {
      content: "";
      display: block;
      clear: both;
    }
  }
  tbody tr:last-child {
    border-bottom: 0;
  }
}

.q-table_show-more-button {
  margin: 10px auto;
}

tr.q-table-state-hidden {
  display: none;
}

tr.q-table-state-visible {
  display: table-row !important;
}

.q-table--card-layout tr.q-table-state-visible {
  display: table-row !important;
}

#q-table-minibar-header {
  text-align: center !important;
}

.q-table-minibar--negative {
  right: 50%;
}

.q-table-minibar--mixed {
  min-width: 180px;
  background-color:rgba(206, 206, 206, 0.15);
}

.q-table-minibar-cell {
  background-color:rgba(206, 206, 206, 0.15);
  min-width: 140px;
}

.q-table-minibar-cell--value {
  background-color:rgba(206, 206, 206, 0.15);
}

.q-table-minibar-bar--positive {
  background-color: #5e6192;
  height: 17px;
  display: inline-block;
  position: relative;
}

.q-table-minibar-bar--positive::before {
  content: "";
  position: absolute;
  border-left: 0.5px solid #393855;
  height: 19px;
  top: -1px;
}

.q-table-minibar-bar--negative {
  background-color: #b23c39;
  height: 17px;
  float: right;
  position: relative;
}

.q-table-minibar-bar--negative::before{
  content: "";
  position: absolute;
  border-right: 0.5px solid #393855;
  height: 19px;
  top: -1px;
  left: 100%;
}

.q-table-minibar-alignment--positive {
  width: 50%;
  text-align: right;
  float: left;
  padding-right: 4px;
}

.q-table-minibar-alignment--negative {
  width: 50%;
  position: relative;
  left: 50%;
  text-align: left;
  padding-left: 4px;
  float: left;
}

.q-table-minibar-alignment--empty {
  width: 100%;
  text-align: center !important;
}

